--- a/UC4_PayrollApp/src/main/resources/application.properties
+++ b/UC4_PayrollApp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=UC3_PayrollApp
+spring.application.name=UC4_PayrollApp
 server.port = 8090
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=nishu
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
